2009-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Correctly treat all assignments with bogus trailing comments.
	Before this patch, automake would silently fail to diagnose and
	to copy into the output those variable assignments which are
	preceded by a comment, and end in backslash newline comment.
	* automake.in (read_am_file): When determining whether an
	escaped newline followed by a comment is an error, correctly use
	the parser state, not the contents of a saved comment, which
	could still be carried over from a comment before an assignment.
	* NEWS: Update.
	* tests/commen11.test: New test.
	* tests/Makefile.am: Update.
	Report by Karl Berry.

2009-04-14  Karl Berry  <karl@freefriends.org>

	manual: improve markup: itemize list in `Extending'.
	* doc/automake.texi (Extending): Use `@item's for user override
	semantics.

2009-04-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	bin_PROGRAMS = $(EXTRA_PROGRAMS) should work.
	* automake.in (am_install_var): For `PROGRAMS' primary, strip
	`$(EXEEXT)' here already, so the name uniquifying works even
	when we look at names repeatedly, with inconsistent executable
	extension; through variable references, we might have added
	the extension ourselves earlier.
	(handle_programs): No need to strip `$(EXEEXT)' here any more.
	* tests/extra8.test: New test.
	* tests/Makefile.am: Update.
	* THANKS: Update.
	Report by Daniel Richard G.

2009-04-10  Jim Meyering  <meyering@redhat.com>

	Fix grammar in comments and documentation.
	* doc/automake.texi (API versioning): Fix grammar.
	* automake.in: Fix grammar in comment.
	* lib/Automake/ChannelDefs.pm: Likewise.
	* tests/ext2.test: Likewise.

2009-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	More minor fixups to vala support.
	* automake.in (lang_vala_finish_target): Fix typo in comment.
	* doc/automake.texi (Vala Support): Fix typo.  Declare vala
	support as "initial".
	* NEWS: Likewise, declare vala support as "initial".

2009-04-05  Jürg Billeter  <j@bitron.ch>
