@@ -32,7 +32,7 @@ cat >> 'configure.in' << 'END'
 AC_PROG_CC
 AM_PROG_CC_C_O
 AC_PROG_LIBTOOL
-AM_PROG_VALAC
+AM_PROG_VALAC([0.7.0])
 PKG_CHECK_MODULES([GOBJECT],[gobject-2.0 >= 2.10])
 AC_CONFIG_FILES([src/Makefile])
 AC_OUTPUT
@@ -65,7 +65,7 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a
 
-./configure
+./configure || Exit 77
 $MAKE
 $MAKE distcheck
 $MAKE distclean
