@@ -1,5 +1,11 @@
 2009-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix AM_PROG_VALAC version requirement detection.
+	* m4/vala.m4 (AM_PROG_VALAC): Remove `Vala ' from valac
+	--version string before comparing versions.
+	* tests/vala2.test: Require version 0.7.0 for the test.
+	Fixes failures of vala2.test and vala3.test with older valac.
+
 	Correctly treat all assignments with bogus trailing comments.
 	Before this patch, automake would silently fail to diagnose and
 	to copy into the output those variable assignments which are
